Revert "Fixed z-indexing issue with hidden PO's that have a single detail query"
This reverts commit e5a8ff8cc1ae41da417fa81f805265c55e71162f.

--- a/src/WebComponents/PersistentObject/persistent-object.scss
+++ b/src/WebComponents/PersistentObject/persistent-object.scss
@@ -105,7 +105,6 @@ $tabsBG: #f1f1f1;
             vi-action-bar {
                 padding-top: 0;
                 z-index: 1;
-                border-bottom-width: 0;
                 @apply(--theme-shadow);
                 margin-bottom: 3px;
             }
